Tests/Runtime2/Error/RetryOnly/.build/timedretrygoal.pr
{
  "name": "TimedRetryGoal",
  "steps": [
    {
      "index": 0,
      "text": "add 1 to %timedRetryAttempts%, write to %timedRetryAttempts%",
      "lineNumber": 2,
      "indent": 0,
      "actions": [
        {
          "module": "math",
          "action": "add",
          "parameters": [
            {
              "name": "A",
              "value": "%timedRetryAttempts%",
              "type": "object"
            },
            {
              "name": "B",
              "value": 1,
              "type": "int"
            }
          ],
          "return": [
            {
              "name": "timedRetryAttempts"
            }
          ],
          "errors": [],
          "warnings": []
        }
      ],
      "errors": [],
      "warnings": [],
      "waitForExecution": true
    },
    {
      "index": 1,
      "text": "throw error \u0022timed fail\u0022",
      "lineNumber": 3,
      "indent": 0,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "message",
              "value": "timed fail",
              "type": "string"
            }
          ],
          "errors": [],
          "warnings": []
        }
      ],
      "errors": [],
      "warnings": [],
      "waitForExecution": true
    }
  ],
  "subGoals": [],
  "visibility": 1,
  "path": "/TimedRetryGoal.goal",
  "prPath": "/.build/timedretrygoal.pr",
  "hash": "92a7990b883411041213bea0bfc53d85d6740a2bcb8f0d5eb8f539278c4f5773",
  "isSetup": false,
  "isEvent": false,
  "isTest": false,
  "errors": [],
  "warnings": [],
  "fullPath": "TimedRetryGoal"
}